Added some stuff

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ flycheck_*.el
 
 # End of https://www.toptal.com/developers/gitignore/api/emacs
 
+# Fish universal variables
+.config/fish/fish_variables
