--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,16 +1,30 @@
+<?xml version='1.0'?>
 <match target="pattern">
- <test name="family" qual="any">
+ <test qual="any" name="family">
   <string>monospace</string>
  </test>
- <edit binding="strong" mode="prepend" name="family">
-  <string>FiraCode Nerd Font Mono</string>
+ <edit binding="strong" name="family" mode="prepend">
+  <string>Fira Code Retina</string>
  </edit>
-
- <test name="family" qual="any">
+ <test qual="any" name="family">
   <string>sans</string>
  </test>
- <edit binding="strong" mode="prepend" name="family">
+ <edit binding="strong" name="family" mode="prepend">
   <string>SF Pro Display</string>
  </edit>
+ <match target="font">
+  <edit name="hinting" mode="assign">
+   <bool>true</bool>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="hintstyle" mode="assign">
+   <const>hintslight</const>
+  </edit>
+ </match>
+ <match target="font">
+  <edit name="rgba" mode="assign">
+   <const>rgb</const>
+  </edit>
+ </match>
 </match>
-
