--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,1 +1,4 @@
-include ~/.cache/wal/colors-kitty.conf
+include one-dark.conf
+# font_family Fira Code Retina
+font_size 16
+allow_remote_control yes
