Lots of cleanup, misc. changes and a font switch

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,15 +1,15 @@
 <?xml version='1.0'?>
 <match target="pattern">
- <test qual="any" name="family">
+ <test name="family" qual="any">
   <string>monospace</string>
  </test>
- <edit binding="strong" name="family" mode="prepend">
-  <string>Fira Code Retina</string>
+ <edit name="family" mode="prepend" binding="strong">
+  <string>JetBrainsMono Nerd Font Mono</string>
  </edit>
- <test qual="any" name="family">
+ <test name="family" qual="any">
   <string>sans</string>
  </test>
- <edit binding="strong" name="family" mode="prepend">
+ <edit name="family" mode="prepend" binding="strong">
   <string>SF Pro Display</string>
  </edit>
  <match target="font">
@@ -27,4 +27,5 @@
    <const>rgb</const>
   </edit>
  </match>
+ <dir>~/.fonts</dir>
 </match>
