--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,6 @@
 include one-dark.conf
+# font_family Fira Code Retina Nerd Font Complete Mono
 # font_family Fira Code Retina
 font_size 16
-allow_remote_control yes
+allow_remote_control no
+clipboard_control write-clipboard read-clipboard
