A bunch of stuff

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
   <string>monospace</string>
  </test>
  <edit name="family" mode="prepend" binding="strong">
-  <string>JetBrainsMono Nerd Font Mono</string>
+  <string>JetBrains Mono Light</string>
  </edit>
  <test name="family" qual="any">
   <string>sans</string>
