--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -4,3 +4,5 @@ include one-dark.conf
 font_size 16
 allow_remote_control no
 clipboard_control write-clipboard read-clipboard
+shell_integration enabled
+confirm_os_window_close -1
